<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/admin_home">
<!--    admin-->
    <fragment
        android:id="@+id/admin_home"
        android:name="com.example.fastfood.ui.home.HomeKhachHang"
        android:label="@string/title_home"
        tools:layout="@layout/khach_hang_home" />
    <fragment
        android:id="@+id/admin_thong_ke"
        android:name="com.example.fastfood.FragmentAdmin.AdminThongKeFragment"
        android:label="@string/title_thong_ke"
        tools:layout="@layout/fragment_admin_thong_ke" />
    <fragment
        android:id="@+id/admin_doanh_thu"
        android:name="com.example.fastfood.FragmentAdmin.AdminDoanhThuFragment"
        android:label="@string/title_doanh_thu"
        tools:layout="@layout/fragment_admin_doanh_thu" />
    <fragment
        android:id="@+id/admin_ca_nhan"
        android:name="com.example.fastfood.FragmentAdmin.AdminCaNhanFragment"
        android:label="@string/title_ca_nhan"
        tools:layout="@layout/fragment_admin_ca_nhan" />
</navigation>